tests in reports-flowui module: required, validator, cross validator, default value provider, table output #667